# shine

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  _typos.toml  cliff.toml  deny.toml  install.sh  renovate.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  idea-plan.md  task.md
.github/workflows/: build.yml  renovate.yml  setup-labels.yml
cli/: Cargo.toml  build.rs
cli/src/: bin_links.rs  check.rs  colors.rs  list.rs  main.rs  presets.rs  update_check.rs
cli/src/apps/: annotation.rs  file_ops.rs  manifest.rs  metadata.rs  mod.rs
cli/src/apps/transforms/: jsonc.rs  mod.rs  template.rs
cli/src/commands/: app.rs  check.rs  env.rs  mod.rs  preset.rs  self_install.rs  shell.rs  sys.rs
cli/src/config/: mod.rs
cli/src/env/: mod.rs  upgrade.rs
cli/src/shells/: metadata.rs  mod.rs  proxy.rs
cli/src/sys/: mod.rs
docs/: PLAN.md
presets/app/JetBrains/: .ideavimrc  shine.toml
presets/app/archey4/: config.json  shine.toml
presets/app/docker/: daemon.jsonc  shine.toml
presets/app/fastfetch/: config.jsonc  shine.toml
presets/app/ghostty/: config.ghostty  shine.toml
presets/app/git/: gitconfig
presets/app/starship/: starship.toml
presets/app/vim/: _machine_specific.vim  shine.toml  vimrc
presets/shell/proxy/: set_proxy.sh  shine.toml  uset_proxy.sh
presets/shell/tools/: test_tools.sh
presets/sys/macos/: init.sh  shine.toml
presets/sys/ubuntu/: init.sh  shine.toml
utils/: Cargo.toml
utils/src/: migration.rs
