[workspace]
members = ["cli", "utils"]
default-members = ["cli"]
resolver = "2"

[workspace.package]
version = "0.5.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Felix Jiang <biulight007@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.102"
directories = "6.0.0"
toml = "1.1.2"
toml_edit = "0.25.11"
