[package]
name = "cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "shine"
path = "src/main.rs"

[dependencies]
utils = { path = "../utils" }
anyhow = { workspace = true }
clap = { version = "4.6.1", features = ["derive"] }
directories = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.2"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "fs"] }
toml = { workspace = true }
toml_edit = { workspace = true }
rust-embed = { version = "8", features = ["debug-embed", "interpolate-folder-path"] }
uuid = { version = "1.23.1", features = ["serde", "v4", "v7"] }
