[package]
name = "cli"
version.workspace = true
edition = "2024"
license = "MIT"

[[bin]]
name = "shine"
path = "src/main.rs"

[dependencies]
utils = { path = "../utils" }
anyhow = { workspace = true }
clap = { version = "4.6.1", features = ["derive"] }
directories = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.2"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "fs"] }
toml = { workspace = true }
toml_edit = { workspace = true }
rust-embed = { version = "8", features = ["debug-embed", "interpolate-folder-path"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "default-tls"] }
semver = "1.0.28"
serde_json = "1.0.145"
flate2 = "1.1.4"
tar = "0.4.44"
uuid = { version = "1.23.1", features = ["serde", "v4", "v7"] }
